added ui to users, adjustment on inventory ui and dashboard suprise

--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -68,28 +68,29 @@
 
       <div class="main-container">
         <div class="first-row">
+            <h3 class="title">Sales Activity</h3>
                     <ul class="sales-activity">
-                      <h3 class="title">Sales Activity</h3>
+                    
                       <li class="sales-info">
-                          <i class='bx bx-box' ></i>
+                          <i class='bx bx-check-circle'></i>
                           <span class="info-name">Confirmed</span>
                           <div class="info-number">1310</div>
                       </li>
 
                       <li class="sales-info">
-                          <i class='bx bx-box' ></i>
+                          <i class='bx bxs-ship' ></i>
                           <span class="info-name">To Be Shipped</span>
                             <div class="info-number">403</div>
                       </li>
 
                       <li class="sales-info">
-                          <i class='bx bx-box' ></i>
+                          <i class='bx bxs-truck' ></i>
                           <span class="info-name">To Be Delivered</span>
                             <div class="info-number">389</div>
                       </li>
 
                       <li class="sales-info">
-                          <i class='bx bx-box' ></i>
+                          <i class='bx bx-receipt' ></i>
                           <span class="info-name">To Be Invoiced</span>
                             <div class="info-number">565</div>
                       </li>
@@ -143,7 +144,9 @@
     </div> 
 
     <div class="side-container">
-          <div class="calendar"></div>
+          <div class="calendar">
+            <iframe src="https://calendar.google.com/calendar/embed?height=460&amp;wkst=1&amp;bgcolor=%23c7aabc&amp;ctz=Asia%2FManila&amp;src=aW1yb292cHFycXI3cGFkaTIycnVocGY5cmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showCalendars=0" style="border:solid 1px #777" width="490" height="460" frameborder="0" scrolling="no"></iframe>
+          </div>
     </div>
 
 
