user page modified

--- a/client/user/index.html
+++ b/client/user/index.html
@@ -81,22 +81,30 @@
             </div>
     </div>
     <div class="main-container">
-      <h3 id="userID">User ID: </h3>
-      <h3 id="email">Email: </h3>
-      <h3 id="role">Role: </h3>
-      <h3 id="country">Country: </h3>
+        <div class="profile-container">
+          <div class="left-profile">
+              <h3 id="userID">User ID: </h3>
+              <h3 id="email">Email: </h3>
+          </div>
+          <div class="right-profile">
+              <h3 id="role">Role: </h3>
+              <h3 id="country">Country: </h3>
+          </div>
+        </div> <br>
+
+        <div class="purchase-container">
+          <h3>Purchases</h3>
+          <table id="purchase_table">
+            <tr>
+              <td>Description</td>
+              <td>Quantity</td>
+              <td>Total</td>
+              <td>Date Purchased</td>
+            </tr>
+          </table>
+        </div>
     </div> 
-    <div>
-      <h3>Purchases</h3>
-      <table id="purchase_table">
-        <tr>
-          <td>Description</td>
-          <td>Quantity</td>
-          <td>Total</td>
-          <td>Date Purchased</td>
-        </tr>
-      </table>
-    </div>
+
 
   </section>
   <script src="user_script.js"></script>
