--- a/client/inventory/index.html
+++ b/client/inventory/index.html
@@ -92,9 +92,8 @@
 
               <div class="demand-container">
                     <div class="rectangle">
-                      <h5 class="sales-txt">Item Demand</h5>
-                      <div id="item-demand"></div>
-                      <canvas id="financeView" width="150" height="150"></canvas>
+                      <h5 class="sales-txt">Item Demand Trend</h5>
+                      <canvas id="itemDemand"></canvas>
                    </div>
               </div>
           </div> 
@@ -102,7 +101,7 @@
 
       <div class="side-container">
         <div class="upper-subcontainer">
-          <h3 class="top-text">Monthly Top Items</h3>
+          <h3 class="top-text">Monthly Top 10 Items</h3>
         </div>  
         <div class="lower-subcontainer">
         </div>
@@ -118,11 +117,9 @@
         </div>  
       </div>
 
-            
-
    
   </section>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="inventory_script.js"></script>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
   </body>
