finished inventory charts

--- a/client/inventory/index.html
+++ b/client/inventory/index.html
@@ -87,6 +87,7 @@
               <div class="overview-container">
                     <div class="rectangle">
                       <h5 class="sales-txt">Inventory Overview</h5>
+                      <canvas id="itemPrices"></canvas>
                     </div>
               </div> <br>
 
