able to search in ecommerce page

--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -80,8 +80,8 @@
             <div class="search-container">
                   <div class="search_wrap search_wrap_1">
                         <div class="search_box">
-                            <input type="text" class="input" placeholder="search...">
-                              <div class="btn btn_common">
+                            <input id="search" type="text" class="input" placeholder="search...">
+                              <div id="searchButton" class="btn btn_common">
                                 <i class="fas fa-search"></i>
                               </div>
                         </div>
