minor css changes

--- a/client/cart/index.html
+++ b/client/cart/index.html
@@ -90,6 +90,9 @@
         <div class="grand-total">
           <h5 id="grand_total" class="total">Grand Total: $</h5>
         </div>
+        <div class="check-out">
+          <button class="checkout" id="checkout_btn">Checkout</button>
+        </div>
     </div>
     </div>
 
@@ -99,7 +102,6 @@
 
       </div>
     </div>
-    <button id="checkout_btn">Checkout</button>
   </section>
   
   <script src="cart_script.js"></script>
