--- a/client/user/index.html
+++ b/client/user/index.html
@@ -66,7 +66,7 @@
     </ul>
   </div>
   <section class="home-section">
- 
+    <div class="text"></div>
     <div class="main-container">
 
         <div class="profile-container">
