few changes on dashboard and user css

--- a/client/user/index.html
+++ b/client/user/index.html
@@ -70,6 +70,7 @@
     <div class="main-container">
 
         <div class="profile-container">
+          <img src="../assets/images/sphere alt logo.png" alt="">
           <div class="left-profile">
               <h3 id="userID">User ID: </h3>
               <h3 id="email">Email: </h3>
