--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -134,7 +134,7 @@
                   </div>
                   
                   <div class="small-graph">
-                    <h5 class="title">Active Variants</h5>
+                    <h5 class="">Active Variants</h5>
                 </div>
               </div>
             
@@ -145,7 +145,7 @@
 
     <div class="side-container">
           <div class="calendar">
-            <iframe src="https://calendar.google.com/calendar/embed?height=460&amp;wkst=1&amp;bgcolor=%23c7aabc&amp;ctz=Asia%2FManila&amp;src=aW1yb292cHFycXI3cGFkaTIycnVocGY5cmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showCalendars=0" style="border:solid 1px #777" width="490" height="460" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?height=460&amp;wkst=1&amp;bgcolor=%23c7aabc&amp;ctz=Asia%2FManila&amp;src=aW1yb292cHFycXI3cGFkaTIycnVocGY5cmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showCalendars=0" style="border:solid 1px #777" width="490" height="490" frameborder="0" scrolling="no"></iframe>
           </div>
     </div>
 
