added app activity chart on dashboard

--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -68,31 +68,31 @@
 
       <div class="main-container">
         <div class="first-row">
-            <h3 class="title">Sales Activity</h3>
+            <h3 class="title">App Activity</h3>
                     <ul class="sales-activity">
                     
                       <li class="sales-info">
-                          <i class='bx bx-check-circle'></i>
-                          <span class="info-name">Confirmed</span>
-                          <div class="info-number">1310</div>
+                          <i class='bx bxs-user-circle'></i>
+                          <span class="info-name">Users</span>
+                          <div id="users" class="info-number">0</div>
                       </li>
 
                       <li class="sales-info">
-                          <i class='bx bxs-ship' ></i>
-                          <span class="info-name">To Be Shipped</span>
-                            <div class="info-number">403</div>
+                          <i class='bx bxs-shopping-bag' ></i>
+                          <span class="info-name">Items</span>
+                            <div id="items" class="info-number">0</div>
                       </li>
 
                       <li class="sales-info">
-                          <i class='bx bxs-truck' ></i>
-                          <span class="info-name">To Be Delivered</span>
-                            <div class="info-number">389</div>
+                          <i class='bx bxs-receipt' ></i>
+                          <span class="info-name">Invoices</span>
+                            <div id="invoices" class="info-number">0</div>
                       </li>
 
                       <li class="sales-info">
-                          <i class='bx bx-receipt' ></i>
-                          <span class="info-name">To Be Invoiced</span>
-                            <div class="info-number">565</div>
+                          <i class='bx bxs-cart' ></i>
+                          <span class="info-name">In-cart Items</span>
+                            <div id="cart" class="info-number">0</div>
                       </li>
                   </ul>
             </div>
@@ -151,8 +151,6 @@
 
 
   </section>
-  <script src="https://d3js.org/d3.v4.js"></script>
-  <script script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="dashboard_script.js"></script>
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
