--- a/client/user/index.html
+++ b/client/user/index.html
@@ -85,7 +85,7 @@
           <h3>Purchases</h3>
           <table id="purchase_table">
             <tr>
-              <td>Description</td>
+              <td id="description">Description</td>
               <td>Quantity</td>
               <td>Total</td>
               <td>Date Purchased</td>
