added user summary graph in dashboard

--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -100,8 +100,9 @@
             <div class="second-row">
 
               <div class="inventory-container">
-                <h3 class="title">Inventory Summary</h3>
-                  <ul class="inventory-summary">
+                <h3 class="title">User Summary</h3>
+                    <canvas id="userSummary"></canvas>
+                  <!-- <ul class="inventory-summary">
                       <li class="inv-info">
                           <span class="inv-name">Quantity In Hand</span>
                           <span class="inv-number">642</span>
@@ -110,14 +111,14 @@
                           <span class="inv-name">Quantity To Be Recieved</span>
                           <span class="inv-number">321</span>
                       </li>
-                  </ul>
+                  </ul> -->
               </div>
 
               <div class="product-container">
                 
                   <div class="product-table">
                     <h3 class="title">Product Details</h3>
-                    <ul class="product-details">
+                    <!-- <ul class="product-details">
                         <li class="prod-info">
                             <span class="prod-name">Low Stock Product</span>
                             <span class="prod-number">96</span>
@@ -130,7 +131,7 @@
                             <span class="prod-name">All Variants</span>
                             <span class="prod-number">210</span>
                         </li>
-                    </ul>
+                    </ul> -->
                   </div>
                   
                   <div class="small-graph">
@@ -151,6 +152,7 @@
 
 
   </section>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="dashboard_script.js"></script>
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
