adjusted canvas layout

--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -98,17 +98,19 @@
             </div>
 
             <div class="second-row">
-
-              <div class="inventory-container">
-                  <h3 class="title">User Summary</h3>
-                  <canvas id="userSummary"></canvas>
+              
+              <div class="user-container">
+                <div class="user-table">
+                  <h3 class="chart-txt">User Summary</h3>
+                  <canvas id="userSummary" class="canvas-graph"></canvas>
+                  </div>
               </div>
 
-              <div class="product-container">
+              <div class="purchase-container">
                 <div class="product-table">
-                  <h3 class="title">Current Purchases</h3>
+                  <h3 class="chart-txt">Current Purchases</h3>
                   <h4 id="total">Total: $</h4>
-                  <canvas id="dayInvoice"></canvas>
+                  <canvas id="dayInvoice" class="canvas-graph"></canvas>
                 </div>
               </div>
             
@@ -118,7 +120,7 @@
 
     <div class="side-container">
           <div class="calendar">
-            <iframe src="https://calendar.google.com/calendar/embed?height=460&amp;wkst=1&amp;bgcolor=%23c7aabc&amp;ctz=Asia%2FManila&amp;src=aW1yb292cHFycXI3cGFkaTIycnVocGY5cmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showCalendars=0" style="border:solid 1px #777" width="490" height="490" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?height=460&amp;wkst=1&amp;bgcolor=%23c7aabc&amp;ctz=Asia%2FManila&amp;src=aW1yb292cHFycXI3cGFkaTIycnVocGY5cmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23C0CA33&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showCalendars=0" style="border:solid 1px #777" width="490" height="300" frameborder="0" scrolling="no"></iframe>
           </div>
     </div>
 
