fixed undefined on zero purchases

--- a/client/dashboard/index.html
+++ b/client/dashboard/index.html
@@ -102,7 +102,9 @@
               <div class="user-container">
                 <div class="user-table">
                   <h3 class="chart-txt">User Summary</h3>
-                  <canvas id="userSummary" class="canvas-graph"></canvas>
+                  <div class="chart-container" style="position: relative; height:40vh;">
+                    <canvas id="userSummary" class="canvas-graph"></canvas>
+                  </div>
                   </div>
               </div>
 
@@ -110,7 +112,9 @@
                 <div class="product-table">
                   <h3 class="chart-txt">Current Purchases</h3>
                   <h4 id="total">Total: $</h4>
-                  <canvas id="dayInvoice" class="canvas-graph"></canvas>
+                  <div class="chart-container" style="position: relative; height:40vh;">
+                  <canvas id="dayInvoice" height="300" width="500" class="canvas-graph"></canvas>
+                  </div>  
                 </div>
               </div>
             
