fixed alignment on ecommerce page

--- a/client/ecommerce/index.html
+++ b/client/ecommerce/index.html
@@ -92,9 +92,9 @@
       <div id="products" class="product-container">
       </div>
       <div id="pageNumber">
-        <button class="bx" id="prev">Prev</button>
+        <button class="control" id="prev">Prev</button>
           <h1 id="currentPageNumber">1</h1>
-        <button class="bx" id="next">Next</button>
+        <button class="control" id="next">Next</button>
       </div>
     </div>   
   </section>
